tests/success/inner_type_resolve_order.bz
function foo(: foo_t.inner_t)
{}

struct foo_t
{
	struct inner_t
	{}
}

struct bar_t
{
	struct inner_t
	{}
}

function bar(: bar_t.inner_t)
{}
