tests/error/enum_literal_type_match2.bz
function foo(: move auto);

function test()
{
	foo(.a);
}
